frontend/test/should_fail/assign_object_in_function.grg
#using "assign_object_in_function.gm"

function assign(ref t:Test) : Test
{
	t.i = 42;
	return(t);
}
